确认订单页面和支付中心页面的pageObject
确认订单页面和支付中心页面的pageObject

--- a/imoocTest/test-output/index.html
+++ b/imoocTest/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Administrator\AppData\Local\Temp\testng-eclipse-247089152\testng-customsuite.xml</span>
+                    <span>C:\Users\Administrator.4399SBWQZK4BO21\AppData\Local\Temp\testng-eclipse--1232284109\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.lzq.selenium.imoocTest.testCase.Login" hash-for-method="TestAddCart">TestAddCart</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.lzq.selenium.imoocTest.testCase.Login" hash-for-method="getLoginHome">getLoginHome</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.lzq.selenium.imoocTest.testCase.Login" hash-for-method="testBuyNow">testBuyNow</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.lzq.selenium.imoocTest.testCase.Login" hash-for-method="testLogin">testLogin</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.lzq.selenium.imoocTest.testCase.Login" hash-for-method="testSureOrder">testSureOrder</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,16 +140,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TestAddCart">
-                  </a> <!-- TestAddCart -->
-                  <span class="method-name">TestAddCart</span>
+                  <a name="getLoginHome">
+                  </a> <!-- getLoginHome -->
+                  <span class="method-name">getLoginHome</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="getLoginHome">
-                  </a> <!-- getLoginHome -->
-                  <span class="method-name">getLoginHome</span>
+                  <a name="testBuyNow">
+                  </a> <!-- testBuyNow -->
+                  <span class="method-name">testBuyNow</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -154,12 +159,19 @@
                   <span class="method-name">testLogin</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testSureOrder">
+                  </a> <!-- testSureOrder -->
+                  <span class="method-name">testSureOrder</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Administrator\AppData\Local\Temp\testng-eclipse-247089152\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Administrator.4399SBWQZK4BO21\AppData\Local\Temp\testng-eclipse--1232284109\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -208,24 +220,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testLogin')
+data.setCell(0, 1, 'getLoginHome')
 data.setCell(0, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
-data.setCell(0, 3, 27612);
+data.setCell(0, 3, 32588);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'getLoginHome')
+data.setCell(1, 1, 'testLogin')
 data.setCell(1, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
-data.setCell(1, 3, 14587);
+data.setCell(1, 3, 28696);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TestAddCart')
+data.setCell(2, 1, 'testBuyNow')
 data.setCell(2, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
-data.setCell(2, 3, 6401);
+data.setCell(2, 3, 9197);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'testSureOrder')
+data.setCell(3, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
+data.setCell(3, 3, 393);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 48 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -258,11 +274,15 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testLogin</span>
-                <span class="method-start">14592 ms</span>
+                <span class="method-start">32620 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">TestAddCart</span>
-                <span class="method-start">42206 ms</span>
+                <span class="method-name">testBuyNow</span>
+                <span class="method-start">61319 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testSureOrder</span>
+                <span class="method-start">70530 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
