--- a/imoocTest/test-output/old/Default suite/classes.html
+++ b/imoocTest/test-output/old/Default suite/classes.html
@@ -11,7 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TestAddCart</td>
+<td>testSureOrder</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testBuyNow</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
